--- a/chicken/pyvenv.cfg
+++ b/chicken/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\91902\AppData\Local\Programs\Python\Python311
+home = C:\Users\91902\anaconda3
 include-system-site-packages = false
-version = 3.11.1
-executable = C:\Users\91902\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\91902\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\91902\Desktop\FinalYearProject\Chicken-Disease-Classification-Project\chicken
+version = 3.11.5
+executable = C:\Users\91902\anaconda3\python.exe
+command = C:\Users\91902\anaconda3\python.exe -m venv C:\Users\91902\Desktop\FinalYearProject\Chicken-Disease-Classification-Project\chicken
